--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@ li a:hover{
 .search_warper img {
     margin-bottom:30px;
 }
+.g-images{
+    color: #4285f4;
+    font: 16px/16px roboto-regular, arial, sans-serif;
+    left: 215px;
+    bottom: 0;
+    white-space: nowrap;
+    margin-top: -80px;
+    margin-right: 640px;
+}
 
 .search_warper form {
     display: grid;
