adding final project

--- a/style.css
+++ b/style.css
@@ -117,3 +117,85 @@ input[type="text"]{
     border: 1px solid gainsboro;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+nav{
+    max-width: 100%;
+    max-height: 10%;
+}
+nav img{
+    margin: 10px;
+    width: 74px;
+    height: 24px;
+}
+body h1{
+    color: #d93025;
+    margin: 30px 70px;
+    padding: 0;
+    font-size: 1.5em;
+    font-weight: lighter;
+}
+.line-break{
+    border-bottom: 1px solid #ebebeb;
+}
+.form-warper{
+    max-width: 100%;
+    max-height: 100%;
+    padding: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    justify-content: left;
+}
+.av-cap{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 100%;
+    max-height: 10%;
+}
+.left-h6{
+    margin-right: 460px;
+}
+.right-h6{
+    margin-left: 200px;
+}
+.av-form{
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 20px;
+}
+.av-input{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    margin: 10px;
+    justify-content: left;
+    justify-items: left;
+    
+}
+.av-input label{
+    max-width:100%;
+    text-align: left;
+    margin-left: 0;
+}
+.av-input input[type="text"]{
+    padding: 0;
+    margin-left: -100px;
+    min-width:450px;
+    height: 30px;
+    justify-content: center;
+}
+.av-input caption{
+    max-width: 100%;
+}
+.av-button{
+    display: block;
+}
+.av-button input{
+    padding: 10px;
+    text-align: center;
+    margin-left: 178px;
+    border: none;
+    border-radius: 2px;
+    background-color: #4d90fe;
+    color: white;
+}
